# labels_obstech

./: .gitignore  DR350Morefield.lbx  README.md  pyproject.toml  requirements.txt
products/labels/: DR350Morefield.lbx  label.xml  prop.xml  telescope-AP130Hayes.lbx  telescope-AP130Henden.lbx  telescope-AP130bHenden.lbx  telescope-AP130cHenden.lbx  telescope-APM130Boyle.lbx  telescope-ASA600RCMcComiskey.lbx  telescope-ASA600RcHayes.lbx  telescope-ATLAS-ATLAS.lbx  telescope-ATLAS.lbx  telescope-B01-C14Numerica.lbx  telescope-B01-CDK14Navick.lbx  telescope-B01-CDK24Dunkel.lbx  telescope-B01-CDK24TelescopeLive.lbx  telescope-B01-CDK50OBP.lbx  telescope-B01-FSQ106Latorre.lbx  telescope-B01-LensArrayNumerica.lbx  telescope-B01-RASA11Deimos.lbx  telescope-B02-OVT500Ariane.lbx  telescope-B02-RASA14Ariane.lbx  telescope-B02-SurveyAriane.lbx  telescope-B03-RC400Pony.lbx  telescope-B04-C11Numerica.lbx  telescope-B04-RIDK400Dziuba.lbx  telescope-B04-RIDK400Selby.lbx  telescope-B04-TOA150Deepskywest.lbx  telescope-B05-CDK12.5Chung.lbx  telescope-B05-CDK17Churchill.lbx  telescope-B05-CDK17Pugh.lbx  telescope-B05-CDK17Turgeon.lbx  telescope-B05-CDK20Churchill.lbx  telescope-B05-CDK20Muller.lbx  telescope-B05-CDK20Valente.lbx  telescope-B05-E180Liu.lbx  telescope-B05-FSQ106QingshanLi.lbx  telescope-B05-OODK350QingshanLi.lbx  telescope-B05-RASA14Seul.lbx  telescope-B05-RH200Chilescope.lbx  (+186 more)
src/labels_obstech/: __init__.py  label.py  maps.py  utils.py
src/labels_obstech/data/telescope/: label.xml  prop.xml
tests/: buildings.py
